--- a/.github/workflows/deploy-job.yml
+++ b/.github/workflows/deploy-job.yml
@@ -25,7 +25,7 @@ jobs:
       - name: checkout repo
         uses: actions/checkout@v3
       - name: Stop and remove containers, networks
-        run: docker-compose down
+        run: docker-compose down --file ./docker/docker-compose.yml
       - name: Stop and remove containers, networks
         run: docker rm -vf $(docker ps -aq)
       - name: Remove unused data
